[package]
name = "secular"
version = "0.1.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
description = "No Diacr!"
edition = "2018"
keywords = ["stupid", "unicode", "thingie"]
license = "MIT"
categories = ["text-processing"]
readme = "README.md"

[features]
ascii = []
bmp = []
default = ["ascii"]

[dependencies]
unicode-normalization = "0.1"
