[package]
name = "secular"
version = "1.0.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
description = "No Diacr!"
edition = "2018"
keywords = ["diacritics", "unicode", "normalization"]
license = "MIT"
categories = ["text-processing"]
readme = "README.md"

[features]
bmp = []
normalization = ["unicode-normalization"]
default = []

[dependencies]
unicode-normalization = { version = "0.1", optional = true }
